--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,8 +32,7 @@ html {
 body {
   padding: 0;
   width: 100%;
-  height: 100%;
-  min-height: 100% !important;
+  min-height: 100vh;
   margin: 0;
   top: 0;
   background-color: var(--color-white);
@@ -50,4 +49,9 @@ h5 {
 
 br {
   margin-bottom: 8px;
+}
+
+#__nuxt {
+  height: 100%;
+  min-height: 100vh;
 }
